# sync_async

./: Cargo.toml  README.md
src/: lib.rs  utils.rs
src/args/: mod.rs
src/map/: mod.rs  replace_item_name.rs  replace_item_name_in_doc.rs
src/map/map_attrs/: mod.rs
src/map/map_fileds/: mod.rs
src/map/map_generics/: mod.rs
src/map/map_items/: mod.rs
src/map/map_items/map_fn/: get_attrs.rs  handle_fn.rs  mod.rs  remove_await.rs
src/map/map_type/: mod.rs
