[package]
name = "sync_async"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["OkaYu"]
readme = "README.md"
repository = "https://github.com/aiueo13/sync_async"
description = "A helper for implementing both sync and async APIs."

[lib]
proc-macro = true

[dependencies]
quote = "1"
syn = { version = "2", features = ["full"] }
proc-macro2 = "1"